# ffmpeg_newbie

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/godot/ffmpeg_newbie/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audioplay.cpp  newbie.cpp  newbie.h  simpleopensles.cpp  simpleplayav.cpp  simpleplayav1.cpp.bak  simpleplayav2.cpp  simpleplayer.cpp  simplepthread.cpp  transyuv.cpp
app/src/main/cpp/include/ffmpeg/libavutil/: avconfig.h
app/src/main/java/com/godot/ffmpeg_newbie/: MainActivity.java  SchemeDispatcherActivity.java  SimplePlayAVActivity.java  SimplePlayerActivity.java
app/src/main/java/com/godot/ffmpeg_newbie/player/: OpenSLESPlay.java  SimpleAVPlayer.java  SimpleAudioPlay.java  SimplePlayer.java  Test.java  VVideoView.java
app/src/main/java/com/godot/util/: UUIDUtils.java
app/src/main/res/layout/: activity_main.xml  activity_simple_play_av.xml  activity_simple_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/godot/ffmpeg_newbie/: ExampleUnitTest.java
doc/build_script/: build_android.sh  build_android_arm.sh  build_android_x86.sh  build_x86.sh
gradle/wrapper/: gradle-wrapper.properties
